tasks/05-paracl/test/errors/rename.pcl
func() : test {
  return 1;
}

test = test;